src/objects/AutomatedTestingResult__c.object
<CustomObject>
    <description>This is a log for the results of the automated testing run</description>
    <fields>
        <fullName>AsyncId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AsyncId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Environment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_DateTime__c</fullName>
        <defaultValue>now()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Run DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Report__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Report</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tests_Executed__c</fullName>
        <label>Tests Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tests_Failed__c</fullName>
        <label>Tests Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tests_Passed__c</fullName>
        <label>Tests Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AutomatedTestingResult</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tests_Executed__c</columns>
        <columns>Tests_Failed__c</columns>
        <columns>Tests_Passed__c</columns>
        <columns>Test_Report__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AutomatedTestingQueue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutomatedTestingResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>